--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -150,10 +150,13 @@
      <Compile Include="Assets\scripts\dungeon\DungeonManager.cs" />
      <Compile Include="Assets\scripts\dungeon\DungeonModel.cs" />
      <Compile Include="Assets\scripts\dungeon\DungeonView.cs" />
+     <Compile Include="Assets\scripts\dungeon\room\RoomEvent.cs" />
      <Compile Include="Assets\scripts\dungeon\room\RoomFactory.cs" />
      <Compile Include="Assets\scripts\dungeon\room\RoomModel.cs" />
      <Compile Include="Assets\scripts\dungeon\room\RoomType.cs" />
      <Compile Include="Assets\scripts\dungeon\room\RoomView.cs" />
+     <Compile Include="Assets\scripts\dungeon\ui\DungeonUI.cs" />
+     <Compile Include="Assets\scripts\dungeon\ui\FightButton.cs" />
      <Compile Include="Assets\scripts\game\GameEvent.cs" />
      <Compile Include="Assets\scripts\game\GameManager.cs" />
      <Compile Include="Assets\scripts\input\MiniGestureRecognizer.cs" />
@@ -163,9 +166,9 @@
      <Compile Include="Assets\scripts\town\TownEvent.cs" />
      <Compile Include="Assets\scripts\town\TownManager.cs" />
      <Compile Include="Assets\scripts\town\TownView.cs" />
-     <Compile Include="Assets\scripts\ui\ButtonView.cs" />
      <Compile Include="Assets\scripts\ui\InteractableBase.cs" />
      <Compile Include="Assets\scripts\util\Messenger.cs" />
+     <Compile Include="Assets\scripts\util\util.cs" />
      <None Include="Assets\scripts\Plugins\GoKit\easing\easeEquationsLicense.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>E:/Programs/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
